--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
       <div id="content" class="box content">
         <div>
           <p>Welcome! This is an info site for Shiren 2 (N64).</p>
-          <p>Please do not use images or information from this site elsewhere.</p>
+          <p>Please do not copy information from this site elsewhere without asking.</p>
           </p>
         </div>
       </div>
