--- a/html/system/monster.html
+++ b/html/system/monster.html
@@ -16,6 +16,269 @@
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
         <div>
+          <h2>Monsters</h2>
+          <div id="monster_quick_links" class="monster_quick_links">
+            <ul>
+              <li><a href="#monster_table_explanation">Table Explanation / Notes</a></li>
+              <li><a href="#normal">Normal Type</a></li>
+              <ul>
+                <li><a href="#mamel">Mamel Family</a></li>
+                <li><a href="#mamel">Chintala Family</a></li>
+                <li><a href="#mamel">Piko Hammer Family</a></li>
+                <li><a href="#mamel">Armordillo Family</a></li>
+                <li><a href="#mamel">Droplet Ninja Family</a></li>
+                <li><a href="#mamel">Mr. Drone Family</a></li>
+                <li><a href="#mamel">Stone Beast Family</a></li>
+                <li><a href="#mamel">Copycat Mask Family</a></li>
+                <li><a href="#mamel">Schubell Family</a></li>
+                <li><a href="#mamel">Dosukoi Family</a></li>
+                <li><a href="#mamel">Snacky</a></li>
+                <li><a href="#mamel">Tiny Phoenix</a></li>
+                <li><a href="#mamel">Escargon</a></li>
+                <li><a href="#mamel">Queen Spider</a></li>
+                <li><a href="#mamel">Armor Spider</a></li>
+                <li><a href="#mamel">N'dubba</a></li>
+              </ul>
+              <li><a href="#normal">Weapon Type</a></li>
+              <ul>
+                <li><a href="#mamel">Swordsman Family</a></li>
+                <li><a href="#mamel">Taur Family</a></li>
+                <li><a href="#mamel">Ashigarudon Family</a></li>
+              </ul>
+              <li><a href="#normal">Throwing Type</a></li>
+              <ul>
+                <li><a href="#mamel">Porky Family</a></li>
+                <li><a href="#mamel">Horse Ronin Family</a></li>
+                <li><a href="#mamel">Tiger Tosser Family</a></li>
+              </ul>
+              <li><a href="#normal">Magic Type</a></li>
+              <ul>
+                <li><a href="#mamel">King Tusker Family</a></li>
+                <li><a href="#mamel">Bat Kangaroo Family</a></li>
+                <li><a href="#mamel">Sheep Priest Family</a></li>
+              </ul>
+              <li><a href="#normal">Item Change Type</a></li>
+              <ul>
+                <li><a href="#mamel">Nigiri Trainee Family</a></li>
+                <li><a href="#mamel">Mixer Family</a></li>
+                <li><a href="#mamel">Straw Voodoll Family</a></li>
+                <li><a href="#mamel">Weather Doll Family</a></li>
+              </ul>
+              <li><a href="#normal">Stealing Type</a></li>
+              <ul>
+                <li><a href="#mamel">Zalokleft Family</a></li>
+                <li><a href="#mamel">Gamarra Family</a></li>
+                <li><a href="#mamel">Gyadon Family</a></li>
+              </ul>
+              <li><a href="#normal">Dragon Type</a></li>
+              <ul>
+                <li><a href="#mamel">Dragon Family</a></li>
+                <li><a href="#mamel">Shaaga Family</a></li>
+                <li><a href="#mamel">Bone Dragon Family</a></li>
+              </ul>
+              <li><a href="#normal">Ghost Type</a></li>
+              <ul>
+                <li><a href="#mamel">Pumphantasm Family</a></li>
+                <li><a href="#mamel">Gale Family</a></li>
+                <li><a href="#mamel">Yamikichi Family</a></li>
+              </ul>
+              <li><a href="#normal">Drain Type</a></li>
+              <ul>
+                <li><a href="#mamel">Twisty Hani</a></li>
+                <li><a href="#mamel">Slug Family</a></li>
+                <li><a href="#mamel">Scorpion Family</a></li>
+                <li><a href="#mamel">Hunger Puppet Family</a></li>
+              </ul>
+              <li><a href="#normal">One Eye Type</a></li>
+              <ul>
+                <li><a href="#mamel">Gazer Family</a></li>
+                <li><a href="#mamel">Ironhead Family</a></li>
+                <li><a href="#mamel">Golem Family</a></li>
+              </ul>
+              <li><a href="#normal">Bomb Type</a></li>
+              <ul>
+                <li><a href="#mamel">Wolf Droid Family</a></li>
+                <li><a href="#mamel">Patient Bag Family</a></li>
+                <li><a href="#mamel">Bow Boy Family</a></li>
+              </ul>
+              <li><a href="#normal">Water Type</a></li>
+              <ul>
+                <li><a href="#mamel">Bored Kappa Family</a></li>
+                <li><a href="#mamel">Water Strider</a></li>
+                <li><a href="#mamel">Spearfish Family</a></li>
+                <li><a href="#mamel">Orcan Family</a></li>
+                <li><a href="#mamel">Aqua Dragon Family</a></li>
+                <li><a href="#mamel">Shotfish Family</a></li>
+              </ul>
+              <li><a href="#normal">Bomb Type</a></li>
+              <ul>
+                <li><a href="#mamel">Wolf Droid Family</a></li>
+                <li><a href="#mamel">Patient Bag Family</a></li>
+                <li><a href="#mamel">Bow Boy Family</a></li>
+              </ul>
+              <li><a href="#normal">Oni Type</a></li>
+              <ul>
+                <li><a href="#mamel">Small Oni Family</a></li>
+                <!-- Small Oni, Rocky Oni, Stumpy Oni -->
+                <li><a href="#mamel">Lanky Oni Family</a></li>
+                <!-- Lanky Oni, Slender Oni, Skinny Oni -->
+                <li><a href="#mamel">Galaha</a></li>
+                <li><a href="#mamel">Boss Oni</a></li>
+              </ul>
+              <li><a href="#normal">Others</a></li>
+              <ul>
+                <li><a href="#mamel">Shopkeeper Family</a></li>
+                <!-- Shopkeeper, Asst. Manager, Manager -->
+                <li><a href="#mamel">Trader Family</a></li>
+                <!-- Trader, Hawker -->
+                <li><a href="#mamel">Sheriff</a></li>
+                <li><a href="#mamel">Guard Dog</a></li>
+                <li><a href="#mamel">Shuten Child</a></li>
+                <li><a href="#mamel">Clay Figures</a></li>
+                <!-- Figure, Good Figure, Great Figure -->
+                <li><a href="#mamel">Oni Dolls</a></li>
+                <!-- Oni Doll, Oni Doll 2 -->
+              </ul>
+            </ul>
+          </div>
+          <div id="monster_table_explanation">
+            <h2>Table Explanation / Notes</h2>
+            <div>
+              <ul>
+                <li>Defense:</li>
+                <ul>
+                  <li>Gets divided by 2 if a monster is being attacked by another monster.</li>
+                </ul>
+                <li>Sleep:</li>
+                  <ul>
+                    <li>Chance monster is sleeping when generated.</li>
+                  </ul>
+                <li>Element:</li>
+                  <ul>
+                    <li>Monsters can have multiple elements.</li>
+                    <li>Elements may change within the same monster family, depending on the rank.</li>
+                  </ul>
+                  <div>
+                    <table>
+                      <tr>
+                        <th>Name</th>
+                        <th>Info</th>
+                      </tr>
+                      <tr>
+                        <td>Fast</td>
+                        <td>
+                          Moves at x2 or x3 speed.<br>
+                          Speed returns to normal when sealed.
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>Slow</td>
+                        <td>
+                          Moves at 1/2 speed.<br>
+                          Speed returns to normal when sealed.
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>Floating</td>
+                        <td>
+                          Will not trigger traps, and will not slip on ice.<br>
+                          Cannot move over water unless it also has the Flying element.<br>
+                          Effect is nullified when a Gravity Statue is present.
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>Flying</td>
+                        <td>
+                          Can move over water and areas without ground.<br>
+                          Monsters with Flying element always come with Floating element.
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>Wall-clip</td>
+                        <td>
+                          Moves and attacks through walls.<br>
+                          Cannot move through unbreakable walls.<br>
+                          Monsters with wall clip can see Shiren anywhere on the current floor.<br>
+                          Both effects are nullified when sealed.
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>Water-only</td>
+                        <td>Only able to move in water.</td>
+                      </tr>
+                      <tr>
+                        <td>Amphibious</td>
+                        <td>Can move across both land and water.</td>
+                      </tr>
+                      <tr>
+                        <td>Magic</td>
+                        <td>
+                          Special attack is magic-based and can be reflected by <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/shield.html#echo_shield">Echo Shield</a>.<br>
+                          Special attack is nullified when a No-Magic Statue is present.
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>Weapon</td>
+                        <td>Attack is halved when splashed by water from a <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/pot.html#water_pot">Water Pot</a>.</td>
+                      </tr>
+                      <tr>
+                        <td>One-eyed</td>
+                        <td>Takes additional damage from <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/weapon.html#cyclops_killer">Cyclops Killer</a>.</td>
+                      </tr>
+                      <tr>
+                        <td>Drain</td>
+                        <td>Takes additional damage from <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/weapon.html#drain_buster">Drain Buster</a>.</td>
+                      </tr>
+                      <tr>
+                        <td>Ghost</td>
+                        <td>
+                          Takes additional damage from <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/weapon.html#ghost_sickle">Ghost Sickle</a>.<br>
+                          Receives damage if hit by <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/grass.html#herb">Herb</a>, <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/grass.html#otogiriso">Otogiriso</a>, or <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/staff.html#heal_staff">Heal Staff</a>.
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>Dragon</td>
+                        <td>Takes additional damage from <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/weapon.html#dragon_killer">Dragon Killer</a> and <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/weapon.html#ryujin_sword">Ryujin Sword</a>.</td>
+                      </tr>
+                      <tr>
+                        <td>Bomb</td>
+                        <td>
+                          Special attack is bomb or explosion related.<br>
+                          Takes additional damage from <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/weapon.html#crescent_arm">Crescent Arm</a>.<br>
+                          Reduce damage from Bomb type special attacks with a <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/shield.html#blast_shield">Blast Shield</a>.<br>
+                          Splash water from a <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/pot.html#water_pot">Water Pot</a> to seal them.
+                        </td>
+                      </tr>
+                    </table>
+                  </div>
+                <li>Wake:</li>
+                <div>
+                  <table>
+                    <tr>
+                      <th>Type</th>
+                      <th>Condition</th>
+                    </tr>
+                    <tr>
+                      <td>Adjacent</td>
+                      <td>Wakes up when Shiren walks next to it.</td>
+                    </tr>
+                    <tr>
+                      <td>3 Tiles</td>
+                      <td>Wakes up when Shiren walks within 3 tiles of it.</td>
+                    </tr>
+                    <tr>
+                      <td>Low %</td>
+                      <td>25% chance to wake up when Shiren enters or exits the room.<br>45% chance to wake up when Shiren walks next to it.</td>
+                    </tr>
+                    <tr>
+                      <td>High %</td>
+                      <td>45% chance to wake up when Shiren enters or exits the room.<br>75% chance to wake up when Shiren walks next to it.</td>
+                    </tr>
+                  </table>
+                </div>
+              </ul>
+            </div>
+          </div>
           <div id="monster_summary_table"></div>
           <div id="monster_details"></div>
         </div>
