--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -1,5 +1,6 @@
 <div class="sidebar-menu" style="min-width: 186px; max-width: 186px;">
   <div class="sidebar-category">[ Items ]</div>
+  <!-- TODO: Replace these with site root–relative paths later -->
   <a href="weapon.html">Weapons</a>
   <a href="shield.html">Shields</a>
   <a href="bracelet.html">Bracelets</a>
@@ -29,7 +30,7 @@
   <div class="sidebar-category">[ System ]</div>
   <a href="">Basics</a>
   <a href="">Seals</a>
-  <a href="monster.html">Monsters</a>
+  <a href="/html/system/monster.html">Monsters</a>
   <a href="">Castle</a>
   <a href="">Allies</a>
   <a href="">Traps</a>
