Update sidebar link to monster page

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -30,7 +30,7 @@
   <div class="sidebar-category">[ System ]</div>
   <a href="">Basics</a>
   <a href="">Seals</a>
-  <a href="/html/system/monster.html">Monsters</a>
+  <a href="/shiren2/html/system/monster.html">Monsters</a>
   <a href="">Castle</a>
   <a href="">Allies</a>
   <a href="">Traps</a>
