Update more links

--- a/html/system/monster.html
+++ b/html/system/monster.html
@@ -213,40 +213,40 @@
                       <tr>
                         <td>Magic</td>
                         <td>
-                          Special attack is magic-based and can be reflected by <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/shield.html#echo_shield">Echo Shield</a>.<br>
+                          Special attack is magic-based and can be reflected by <a href="/shiren2/html/item/shield.html#echo_shield">Echo Shield</a>.<br>
                           Special attack is nullified when a No-Magic Statue is present.
                         </td>
                       </tr>
                       <tr>
                         <td>Weapon</td>
-                        <td>Attack is halved when splashed by water from a <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/pot.html#water_pot">Water Pot</a>.</td>
+                        <td>Attack is halved when splashed by water from a <a href="/shiren2/html/item/pot.html#water_pot">Water Pot</a>.</td>
                       </tr>
                       <tr>
                         <td>One-eyed</td>
-                        <td>Takes additional damage from <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/weapon.html#cyclops_killer">Cyclops Killer</a>.</td>
+                        <td>Takes additional damage from <a href="/shiren2/html/item/weapon.html#cyclops_killer">Cyclops Killer</a>.</td>
                       </tr>
                       <tr>
                         <td>Drain</td>
-                        <td>Takes additional damage from <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/weapon.html#drain_buster">Drain Buster</a>.</td>
+                        <td>Takes additional damage from <a href="/shiren2/html/item/weapon.html#drain_buster">Drain Buster</a>.</td>
                       </tr>
                       <tr>
                         <td>Ghost</td>
                         <td>
-                          Takes additional damage from <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/weapon.html#ghost_sickle">Ghost Sickle</a>.<br>
-                          Receives damage if hit by <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/grass.html#herb">Herb</a>, <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/grass.html#otogiriso">Otogiriso</a>, or <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/staff.html#heal_staff">Heal Staff</a>.
+                          Takes additional damage from <a href="/shiren2/html/item/weapon.html#ghost_sickle">Ghost Sickle</a>.<br>
+                          Receives damage if hit by <a href="/shiren2/html/item/grass.html#herb">Herb</a>, <a href="/shiren2/html/item/grass.html#otogiriso">Otogiriso</a>, or <a href="/shiren2/html/item/staff.html#heal_staff">Heal Staff</a>.
                         </td>
                       </tr>
                       <tr>
                         <td>Dragon</td>
-                        <td>Takes additional damage from <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/weapon.html#dragon_killer">Dragon Killer</a> and <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/weapon.html#ryujin_sword">Ryujin Sword</a>.</td>
+                        <td>Takes additional damage from <a href="/shiren2/html/item/weapon.html#dragon_killer">Dragon Killer</a> and <a href="/shiren2/html/item/weapon.html#ryujin_sword">Ryujin Sword</a>.</td>
                       </tr>
                       <tr>
                         <td>Bomb</td>
                         <td>
                           Special attack is bomb or explosion related.<br>
-                          Takes additional damage from <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/weapon.html#crescent_arm">Crescent Arm</a>.<br>
-                          Reduce damage from Bomb type special attacks with a <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/shield.html#blast_shield">Blast Shield</a>.<br>
-                          Splash water from a <a href="http://localhost/~tay/sharksnack.github.io/shiren2/html/item/pot.html#water_pot">Water Pot</a> to seal them.
+                          Takes additional damage from <a href="/shiren2/html/item/weapon.html#crescent_arm">Crescent Arm</a>.<br>
+                          Reduce damage from Bomb type special attacks with a <a href="/shiren2/html/item/shield.html#blast_shield">Blast Shield</a>.<br>
+                          Splash water from a <a href="/shiren2/html/item/pot.html#water_pot">Water Pot</a> to seal them.
                         </td>
                       </tr>
                     </table>
