--- a/html/system/monster.html
+++ b/html/system/monster.html
@@ -7,8 +7,8 @@
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../css/index.css">
-    <link rel="stylesheet" href="../../css/monsters.css">
-    <script type="text/javascript" src="../../js/monsters.js"></script>
+    <link rel="stylesheet" href="../../css/monster.css">
+    <script type="text/javascript" src="../../js/monster.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -20,13 +20,13 @@
           <div id="monster_quick_links" class="monster_quick_links">
             <ul>
               <li><a href="#monster_table_explanation">Table Explanation / Notes</a></li>
-              <li><a href="#normal">Normal Type</a></li>
+              <li><a href="#normal">Normal</a></li>
               <ul>
-                <li><a href="#mamel">Mamel Family</a></li>
-                <li><a href="#mamel">Chintala Family</a></li>
-                <li><a href="#mamel">Piko Hammer Family</a></li>
-                <li><a href="#mamel">Armordillo Family</a></li>
-                <li><a href="#mamel">Droplet Ninja Family</a></li>
+                <li><a href="#mamel_family">Mamel Family</a></li>
+                <li><a href="#chintala_family">Chintala Family</a></li>
+                <li><a href="#piko_hammer_family">Piko Hammer Family</a></li>
+                <li><a href="#armordillo_family">Armordillo Family</a></li>
+                <li><a href="#droplet_ninja_family">Droplet Ninja Family</a></li>
                 <li><a href="#mamel">Mr. Drone Family</a></li>
                 <li><a href="#mamel">Stone Beast Family</a></li>
                 <li><a href="#mamel">Copycat Mask Family</a></li>
@@ -39,104 +39,98 @@
                 <li><a href="#mamel">Armor Spider</a></li>
                 <li><a href="#mamel">N'dubba</a></li>
               </ul>
-              <li><a href="#normal">Weapon Type</a></li>
+              <li><a href="#weapon">Weapon</a></li>
               <ul>
                 <li><a href="#mamel">Swordsman Family</a></li>
                 <li><a href="#mamel">Taur Family</a></li>
                 <li><a href="#mamel">Ashigarudon Family</a></li>
               </ul>
-              <li><a href="#normal">Throwing Type</a></li>
+              <li><a href="#throwing">Throwing</a></li>
               <ul>
                 <li><a href="#mamel">Porky Family</a></li>
                 <li><a href="#mamel">Horse Ronin Family</a></li>
                 <li><a href="#mamel">Tiger Tosser Family</a></li>
               </ul>
-              <li><a href="#normal">Magic Type</a></li>
+              <li><a href="#magic">Magic</a></li>
               <ul>
                 <li><a href="#mamel">King Tusker Family</a></li>
                 <li><a href="#mamel">Bat Kangaroo Family</a></li>
                 <li><a href="#mamel">Sheep Priest Family</a></li>
               </ul>
-              <li><a href="#normal">Item Change Type</a></li>
+              <li><a href="#item_change">Item Change</a></li>
               <ul>
                 <li><a href="#mamel">Nigiri Trainee Family</a></li>
                 <li><a href="#mamel">Mixer Family</a></li>
                 <li><a href="#mamel">Straw Voodoll Family</a></li>
                 <li><a href="#mamel">Weather Doll Family</a></li>
               </ul>
-              <li><a href="#normal">Stealing Type</a></li>
+              <li><a href="#stealing">Stealing</a></li>
               <ul>
                 <li><a href="#mamel">Zalokleft Family</a></li>
                 <li><a href="#mamel">Gamarra Family</a></li>
                 <li><a href="#mamel">Gyadon Family</a></li>
               </ul>
-              <li><a href="#normal">Dragon Type</a></li>
+              <li><a href="#dragon">Dragon</a></li>
               <ul>
                 <li><a href="#mamel">Dragon Family</a></li>
                 <li><a href="#mamel">Shaaga Family</a></li>
                 <li><a href="#mamel">Bone Dragon Family</a></li>
               </ul>
-              <li><a href="#normal">Ghost Type</a></li>
+              <li><a href="#ghost">Ghost</a></li>
               <ul>
                 <li><a href="#mamel">Pumphantasm Family</a></li>
                 <li><a href="#mamel">Gale Family</a></li>
                 <li><a href="#mamel">Yamikichi Family</a></li>
               </ul>
-              <li><a href="#normal">Drain Type</a></li>
+              <li><a href="#drain">Drain</a></li>
               <ul>
                 <li><a href="#mamel">Twisty Hani</a></li>
                 <li><a href="#mamel">Slug Family</a></li>
                 <li><a href="#mamel">Scorpion Family</a></li>
                 <li><a href="#mamel">Hunger Puppet Family</a></li>
               </ul>
-              <li><a href="#normal">One Eye Type</a></li>
+              <li><a href="#one-eyed">One-eyed</a></li>
               <ul>
                 <li><a href="#mamel">Gazer Family</a></li>
                 <li><a href="#mamel">Ironhead Family</a></li>
                 <li><a href="#mamel">Golem Family</a></li>
               </ul>
-              <li><a href="#normal">Bomb Type</a></li>
+              <li><a href="#bomb">Bomb</a></li>
               <ul>
                 <li><a href="#mamel">Wolf Droid Family</a></li>
                 <li><a href="#mamel">Patient Bag Family</a></li>
                 <li><a href="#mamel">Bow Boy Family</a></li>
               </ul>
-              <li><a href="#normal">Water Type</a></li>
+              <li><a href="#water">Water</a></li>
               <ul>
-                <li><a href="#mamel">Bored Kappa Family</a></li>
-                <li><a href="#mamel">Water Strider</a></li>
-                <li><a href="#mamel">Spearfish Family</a></li>
-                <li><a href="#mamel">Orcan Family</a></li>
-                <li><a href="#mamel">Aqua Dragon Family</a></li>
-                <li><a href="#mamel">Shotfish Family</a></li>
+                <li><a href="#bored_kappa_family">Bored Kappa Family</a></li>
+                <li><a href="#water_strider">Water Strider</a></li>
+                <li><a href="#spearfish_family">Spearfish Family</a></li>
+                <li><a href="#orcan_family">Orcan Family</a></li>
+                <li><a href="#aqua_dragon_family">Aqua Dragon Family</a></li>
+                <li><a href="#shotfish_family">Shotfish Family</a></li>
               </ul>
-              <li><a href="#normal">Bomb Type</a></li>
+              <li><a href="#oni">Oni</a></li>
               <ul>
-                <li><a href="#mamel">Wolf Droid Family</a></li>
-                <li><a href="#mamel">Patient Bag Family</a></li>
-                <li><a href="#mamel">Bow Boy Family</a></li>
-              </ul>
-              <li><a href="#normal">Oni Type</a></li>
-              <ul>
-                <li><a href="#mamel">Small Oni Family</a></li>
+                <li><a href="#small_oni_family">Small Oni Family</a></li>
                 <!-- Small Oni, Rocky Oni, Stumpy Oni -->
-                <li><a href="#mamel">Lanky Oni Family</a></li>
+                <li><a href="#lanky_oni_family">Lanky Oni Family</a></li>
                 <!-- Lanky Oni, Slender Oni, Skinny Oni -->
-                <li><a href="#mamel">Galaha</a></li>
-                <li><a href="#mamel">Boss Oni</a></li>
+                <li><a href="#galaha">Galaha</a></li>
+                <li><a href="#boss_oni">Boss Oni</a></li>
               </ul>
-              <li><a href="#normal">Others</a></li>
+              <li><a href="#other">Other</a></li>
               <ul>
-                <li><a href="#mamel">Shopkeeper Family</a></li>
+                <li><a href="#shopkeeper_family">Shopkeeper Family</a></li>
                 <!-- Shopkeeper, Asst. Manager, Manager -->
-                <li><a href="#mamel">Trader Family</a></li>
+                <li><a href="#trader_family">Trader Family</a></li>
                 <!-- Trader, Hawker -->
-                <li><a href="#mamel">Sheriff</a></li>
-                <li><a href="#mamel">Guard Dog</a></li>
-                <li><a href="#mamel">Shuten Child</a></li>
-                <li><a href="#mamel">Clay Figures</a></li>
+                <li><a href="#sheriff">Sheriff</a></li>
+                <li><a href="#guard_dog">Guard Dog</a></li>
+                <li><a href="#shuten_child">Shuten Child</a></li>
+                <li><a href="#clay_figures">Clay Figures</a></li>
                 <!-- Figure, Good Figure, Great Figure -->
-                <li><a href="#mamel">Oni Dolls</a></li>
+                <li><a href="#oni_dolls">Oni Dolls</a></li>
                 <!-- Oni Doll, Oni Doll 2 -->
               </ul>
             </ul>
@@ -153,10 +147,37 @@
                   <ul>
                     <li>Chance monster is sleeping when generated.</li>
                   </ul>
+                <li>Wake:</li>
+                <ul>
+                  <li>Condition in which the monster wakes up from natural sleep.</li>
+                </ul>
+                <div>
+                  <table>
+                    <tr>
+                      <th>Type</th>
+                      <th>Condition</th>
+                    </tr>
+                    <tr>
+                      <td>1 Tile</td>
+                      <td>Wakes up when Shiren walks next to it.</td>
+                    </tr>
+                    <tr>
+                      <td>3 Tiles</td>
+                      <td>Wakes up when Shiren walks within 3 tiles of it.</td>
+                    </tr>
+                    <tr>
+                      <td>Low</td>
+                      <td>25% chance to wake up when Shiren enters or exits the room.<br>45% chance to wake up when Shiren walks next to it.</td>
+                    </tr>
+                    <tr>
+                      <td>High</td>
+                      <td>45% chance to wake up when Shiren enters or exits the room.<br>75% chance to wake up when Shiren walks next to it.</td>
+                    </tr>
+                  </table>
                 <li>Element:</li>
                   <ul>
                     <li>Monsters can have multiple elements.</li>
-                    <li>Elements may change within the same monster family, depending on the rank.</li>
+                    <li>May change within the same monster family, depending on the rank.</li>
                   </ul>
                   <div>
                     <table>
@@ -251,30 +272,6 @@
                       </tr>
                     </table>
                   </div>
-                <li>Wake:</li>
-                <div>
-                  <table>
-                    <tr>
-                      <th>Type</th>
-                      <th>Condition</th>
-                    </tr>
-                    <tr>
-                      <td>Adjacent</td>
-                      <td>Wakes up when Shiren walks next to it.</td>
-                    </tr>
-                    <tr>
-                      <td>3 Tiles</td>
-                      <td>Wakes up when Shiren walks within 3 tiles of it.</td>
-                    </tr>
-                    <tr>
-                      <td>Low %</td>
-                      <td>25% chance to wake up when Shiren enters or exits the room.<br>45% chance to wake up when Shiren walks next to it.</td>
-                    </tr>
-                    <tr>
-                      <td>High %</td>
-                      <td>45% chance to wake up when Shiren enters or exits the room.<br>75% chance to wake up when Shiren walks next to it.</td>
-                    </tr>
-                  </table>
                 </div>
               </ul>
             </div>
