--- a/html/item/scroll.html
+++ b/html/item/scroll.html
@@ -8,7 +8,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../css/index.css">
     <link rel="stylesheet" href="../../css/item.css">
-    <script type="text/javascript" src="../../js/items.js"></script>
+    <script type="text/javascript" src="../../js/item.js"></script>
   </head>
   <body>
     <div class="wrapper">
