--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -1,19 +1,19 @@
 <div class="sidebar-menu" style="min-width: 186px; max-width: 186px;">
   <div class="sidebar-category">[ Items ]</div>
   <!-- TODO: Replace these with site root–relative paths later -->
-  <a href="weapon.html">Weapons</a>
-  <a href="shield.html">Shields</a>
-  <a href="bracelet.html">Bracelets</a>
-  <a href="food.html">Food</a>
-  <a href="grass.html">Grass</a>
-  <a href="staff.html">Staves</a>
-  <a href="scroll.html">Scrolls</a>
-  <a href="pot.html">Pots</a>
-  <a href="ranged.html">Projectiles</a>
-  <a href="material.html">Materials</a>
-  <a href="decoration.html">Decorations</a>
-  <a href="other.html">Other</a>
-  <a href="price_chart.html">Price Chart</a>
+  <a href="/shiren2/html/item/weapon.html">Weapons</a>
+  <a href="/shiren2/html/item/shield.html">Shields</a>
+  <a href="/shiren2/html/item/bracelet.html">Bracelets</a>
+  <a href="/shiren2/html/item/food.html">Food</a>
+  <a href="/shiren2/html/item/grass.html">Grass</a>
+  <a href="/shiren2/html/item/staff.html">Staves</a>
+  <a href="/shiren2/html/item/scroll.html">Scrolls</a>
+  <a href="/shiren2/html/item/pot.html">Pots</a>
+  <a href="/shiren2/html/item/ranged.html">Projectiles</a>
+  <a href="/shiren2/html/item/material.html">Materials</a>
+  <a href="/shiren2/html/item/decoration.html">Decorations</a>
+  <a href="/shiren2/html/item/other.html">Other</a>
+  <a href="/shiren2/html/price_chart.html">Price Chart</a>
   <div class="sidebar-category">[ Dungeons ]</div>
   <div class="sidebar-sub-category">- Story -</div>
   <a href="">Small Valley</a>
