--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar-menu" style="min-width: 186px; max-width: 186px;">
-  <div class="sidebar-category">[ Items ]</div>
+  <div class="sidebar-category">Items</div>
   <!-- TODO: Replace these with site root–relative paths later -->
   <a href="/shiren2/html/item/weapon.html">Weapons</a>
   <a href="/shiren2/html/item/shield.html">Shields</a>
@@ -12,22 +12,22 @@
   <a href="/shiren2/html/item/ranged.html">Projectiles</a>
   <a href="/shiren2/html/item/material.html">Materials</a>
   <a href="/shiren2/html/item/decoration.html">Decorations</a>
-  <a href="/shiren2/html/item/other.html">Other</a>
+  <a href="/shiren2/html/item/other.html">Other</a><br>
   <a href="/shiren2/html/price_chart.html">Price Chart</a>
-  <div class="sidebar-category">[ Dungeons ]</div>
+  <div class="sidebar-category">Dungeons</div>
   <div class="sidebar-sub-category">- Story -</div>
-  <a href="">Small Valley</a>
-  <a href="">Shuten Trail Easy</a>
-  <a href="">Shuten Trail Mid</a>
-  <a href="">Shuten Trail Hard</a>
+  <a href="">Small Valley</a><br>
+  <a href="">Shuten Trail Easy</a><br>
+  <a href="">Shuten Trail Mid</a><br>
+  <a href="">Shuten Trail Hard</a><br>
   <a href="">Onigashima</a>
   <div class="sidebar-sub-category">- Post-game -</div>
-  <a href="">Hidden Hole</a>
-  <a href="">Hidden Hole (B)</a>
-  <a href="">Sealed Room</a>
-  <a href="">Halfway Well</a>
+  <a href="">Hidden Hole</a><br>
+  <a href="">Hidden Hole (B)</a><br>
+  <a href="">Sealed Room</a><br>
+  <a href="">Halfway Well</a><br>
   <a href="">Road to the End</a>
-  <div class="sidebar-category">[ System ]</div>
+  <div class="sidebar-category">System</div>
   <a href="">Basics</a>
   <a href="">Seals</a>
   <a href="/shiren2/html/system/monster.html">Monsters</a>
@@ -35,10 +35,10 @@
   <a href="">Allies</a>
   <a href="">Traps</a>
   <a href="">Statues</a>
-  <a href="">Golden Intervals</a>
-  <a href="">Monster Kingdom</a>
+  <a href="">Golden Intervals</a><br>
+  <a href="">Monster Kingdom</a><br>
   <a href="">Monster House</a>
-  <div class="sidebar-category">[ Playing ]</div>
+  <div class="sidebar-category">Playing</div>
   <div class="sidebar-sub-category">- Techniques -</div>
   <a href="">Basics</a>
   <a href="">Advanced</a>
@@ -49,6 +49,6 @@
   <a href="">Gallery</a>
   <a href="">Exp &amp; Stats</a>
   <a href="">Restricted Play</a>
-  <div class="sidebar-category">[ Links ]</div>
+  <div class="sidebar-category">Links</div>
   <a href="">Project64 (Emulator)</a>
 </div>
