--- a/html/header.html
+++ b/html/header.html
@@ -1,4 +1,4 @@
 <div>
-<img src="http://localhost/~tay/sharksnack.github.io/shiren2/image/site/koppa_eating.png" width="28" height="auto" style="vertical-align: middle;">
+<img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" style="vertical-align: middle;">
 <span>Shark | Shiren 2</span>
 </div>
