--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -1,4 +1,4 @@
-<div class="sidebar-menu" style="min-width: 186px; max-width: 186px;">
+<div class="sidebar-menu">
   <div class="sidebar-category">Items</div>
   <!-- TODO: Replace these with site root–relative paths later -->
   <a href="/shiren2/html/item/weapon.html">Weapons</a>
